fix: Correções críticas no sistema de confirmação de presença e geração de roteiros
🔧 CONFIRMAÇÃO DE PRESENÇA:
- Corrigido sistema de identificação de eventos
- Adicionados IDs únicos para eventos dinâmicos e estáticos
- Melhorado tratamento de erros no modal RSVP
- Debug logging para facilitar troubleshooting

🤖 INTEGRAÇÃO GEMINI API:
- Corrigido prompt incompleto para geração de roteiros
- Melhorado tratamento de erros da API
- Adicionado fallback robusto quando API falha
- Debug logging para monitorar chamadas da API

🏍️ GERAÇÃO DE ROTEIROS:
- Roteiros locais muito mais detalhados e profissionais
- Informações de custos, checklist, segurança
- Formatação clara com emojis e estrutura organizada
- Cálculos automáticos baseados na distância

✅ MELHORIAS GERAIS:
- Sistema de eventos mais robusto
- Melhor experiência do usuário
- Fallbacks garantem funcionamento offline
- Logs detalhados para debugging

--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
                 <!-- Próximos Eventos -->
                 <div id="agenda-container" class="space-y-6">
                     <!-- Evento em destaque -->
-                    <div class="bg-gradient-to-r from-amber-900 via-orange-900 to-amber-900 border border-amber-600 rounded-xl p-6 lg:p-8 shadow-2xl">
+                    <div id="reuniao-quinzenal" class="bg-gradient-to-r from-amber-900 via-orange-900 to-amber-900 border border-amber-600 rounded-xl p-6 lg:p-8 shadow-2xl">
                         <div class="flex flex-col md:flex-row items-start md:items-center justify-between mb-4">
                             <div>
                                 <h3 class="text-2xl font-bold text-amber-100 mb-2">Reunião Quinzenal - Quinta</h3>
