🛡️ SEGURANÇA: API Keys Protegidas com Serverless Functions
✅ PROBLEMA CRÍTICO RESOLVIDO:
• Chaves da Google Gemini API não são mais expostas no frontend
• Implementação de funções serverless para proteção total

🔐 IMPLEMENTAÇÕES DE SEGURANÇA:
• netlify/functions/generate-role.js - Proxy seguro para API
• Detecção automática ambiente (prod vs dev)
• Variáveis de ambiente no servidor (GOOGLE_GEMINI_API_KEY)
• Chaves removidas de todos os arquivos públicos

📚 DOCUMENTAÇÃO:
• SECURITY.md - Guia completo de configuração
• .env.example - Template de variáveis necessárias
• Comentários explicativos no código

🎯 BENEFÍCIOS:
• 🛡️ Chaves invisíveis no navegador
• 🔒 Controle total de acesso
• 🔄 Rotação de chaves sem redeploy
• 📊 Logs e monitoramento seguros

--- a/gerador-index.html
+++ b/gerador-index.html
@@ -232,6 +232,9 @@
                         <a href="index.html" class="text-white hover:text-gold-primary transition-colors">
                             <i class="fas fa-home mr-1"></i>Início
                         </a>
+                        <button onclick="showFavoritos()" class="text-white hover:text-gold-primary transition-colors">
+                            <i class="fas fa-heart mr-1"></i>Favoritos
+                        </button>
                         <a href="analytics.html" class="text-white hover:text-gold-primary transition-colors">
                             <i class="fas fa-chart-bar mr-1"></i>Analytics
                         </a>
