🔧 CORREÇÃO: Ambiente de Desenvolvimento Local
✅ PROBLEMA RESOLVIDO: Erro 405 em desenvolvimento local
• Detecção aprimorada de ambiente (localhost vs produção)
• Configuração automática para desenvolvimento local
• API direta em localhost, serverless em produção

🛠️ IMPLEMENTAÇÕES:
• dev-config.js - Configuração forçada para localhost
• Carregamento condicional do script de desenvolvimento
• Logs de debug para identificar modo ativo
• Chave temporária para testes locais

🔒 SEGURANÇA MANTIDA:
• dev-config.js adicionado ao .gitignore
• Não será deployado em produção
• Produção continua usando funções serverless
• Chaves protegidas no servidor

--- a/gerador-index.html
+++ b/gerador-index.html
@@ -566,6 +566,14 @@
     
     <!-- Scripts -->
     <script src="config.js"></script>
+    <!-- Configuração de desenvolvimento (apenas para localhost) -->
+    <script>
+        if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
+            const devScript = document.createElement('script');
+            devScript.src = 'dev-config.js';
+            document.head.appendChild(devScript);
+        }
+    </script>
     <script src="destinos.js"></script>
     <script src="gerador.js"></script>
     <script>
