--- a/gerador-index.html
+++ b/gerador-index.html
@@ -41,7 +41,7 @@
     
     <!-- CSS Styling -->
     <link rel="stylesheet" href="tailwind-prod.css" id="tailwind-prod" />
-    <script src="https://cdn.tailwindcss.com" id="tailwind-cdn"></script>
+    <script src="https://cdn.tailwindcss.com" id="tailwind-cdn" defer></script>
     
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
