🔧 Fix: Correções Console Final + Compatibilidade
🛡️ SECURITY HEADERS:
• Removido X-Frame-Options de meta tag (deve ser servidor)
• Mantidas outras security headers válidas

🎨 TAILWIND CDN:
• CDN removido completamente em produção
• Console log informativo sobre uso local
• Zero warnings sobre CDN em produção

📝 CAMPO PREFERENCIAS-EXTRAS:
• Adicionado textarea preferencias-extras
• Corrigido label orphan no formulário
• Campo opcional para interesses específicos

📦 DESTINOS.JS:
• Criado array 'destinos' para compatibilidade
• Flatten de DESTINOS_DATABASE para array simples
• Export window.destinos para gerador.js

🛡️ FORM VALIDATION:
• saveFormData agora falha silenciosamente
• getFormData com modo rigoroso/flexível
• handleFormSubmit usa validação rigorosa
• Auto-save não quebra com campos vazios

✅ RESULTADO:
• Zero erros críticos no console
• Fallback funciona com base de destinos
• Form auto-save sem interrupções
• Validação apropriada por contexto

--- a/gerador-index.html
+++ b/gerador-index.html
@@ -9,9 +9,9 @@
     
     <!-- Security Headers -->
     <meta http-equiv="X-Content-Type-Options" content="nosniff" />
-    <meta http-equiv="X-Frame-Options" content="DENY" />
     <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
     <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin" />
+    <!-- X-Frame-Options deve ser configurado no servidor, não em meta tag -->
     
     <!-- Performance & Compatibility -->
     <meta http-equiv="Cache-Control" content="public, max-age=31536000" />
@@ -64,8 +64,11 @@
                 if (tailwindProd) tailwindProd.disabled = true;
                 console.log('🏠 Usando Tailwind CDN (desenvolvimento)');
             } else {
-                // Em produção, remove CDN e usa CSS local
-                if (tailwindCdn) tailwindCdn.remove();
+                // Em produção, remove CDN completamente e usa CSS local
+                if (tailwindCdn) {
+                    tailwindCdn.remove();
+                    console.log('🌐 Tailwind CDN removido - usando CSS local');
+                }
                 console.log('🌐 Usando Tailwind local (produção)');
             }
         })();
@@ -522,6 +525,10 @@
                                                     🎭 Cultura
                                                 </label>
                                             </div>
+                                            <textarea id="preferencias-extras" 
+                                                     class="input-field mt-3" 
+                                                     rows="2" 
+                                                     placeholder="Outros interesses específicos (opcional)..."></textarea>
                                         </div>
                                     </div>
                                 </div>
