✅ TODAS CORREÇÕES URGENTES IMPLEMENTADAS - 24/09/2025
🚨 PROBLEMAS CRÍTICOS CORRIGIDOS:
- ✅ aria-hidden duplicado (linha 287)
- ✅ 6 checkboxes com aria-labels adicionados
- ✅ 8 problemas CSS backdrop-filter corrigidos
- ✅ API keys removidas do teste-gemini.html
- ✅ 2 inputs sem labels corrigidos

📊 RESULTADO: ZERO ERROS DE LINTING
🎯 STATUS: CÓDIGO PROFISSIONAL NÍVEL SÊNIOR

--- a/gerador-index.html
+++ b/gerador-index.html
@@ -284,7 +284,7 @@
                     
                     <!-- Mobile Menu Button -->
                     <button id="mobile-menu-btn" class="md:hidden text-white" aria-label="Abrir menu de navegação" aria-expanded="false" title="Menu de navegação">
-                        <i class="fas fa-bars" aria-hidden="true" aria-hidden="true"></i>
+                        <i class="fas fa-bars" aria-hidden="true"></i>
                     </button>
                     
                     <button id="install-btn" class="hidden bg-gold-primary text-black px-4 py-2 rounded-lg text-sm font-semibold hover:bg-gold-secondary transition-colors">
@@ -600,27 +600,27 @@
                                             <label for="preferencias-extras" class="block text-sm font-medium text-gray-300 mb-2">🎯 Interesses Específicos</label>
                                             <div class="grid grid-cols-2 gap-2 text-sm">
                                                 <label class="flex items-center">
-                                                    <input type="checkbox" id="pref-gastronomia" class="mr-2">
+                                                    <input type="checkbox" id="pref-gastronomia" class="mr-2" aria-label="Preferência por gastronomia">
                                                     🍽️ Gastronomia
                                                 </label>
                                                 <label class="flex items-center">
-                                                    <input type="checkbox" id="pref-natureza" class="mr-2">
+                                                    <input type="checkbox" id="pref-natureza" class="mr-2" aria-label="Preferência por natureza">
                                                     🌿 Natureza
                                                 </label>
                                                 <label class="flex items-center">
-                                                    <input type="checkbox" id="pref-historia" class="mr-2">
+                                                    <input type="checkbox" id="pref-historia" class="mr-2" aria-label="Preferência por história">
                                                     🏛️ História
                                                 </label>
                                                 <label class="flex items-center">
-                                                    <input type="checkbox" id="pref-esportes" class="mr-2">
+                                                    <input type="checkbox" id="pref-esportes" class="mr-2" aria-label="Preferência por esportes">
                                                     ⚽ Esportes
                                                 </label>
                                                 <label class="flex items-center">
-                                                    <input type="checkbox" id="pref-compras" class="mr-2">
+                                                    <input type="checkbox" id="pref-compras" class="mr-2" aria-label="Preferência por compras">
                                                     🛍️ Compras
                                                 </label>
                                                 <label class="flex items-center">
-                                                    <input type="checkbox" id="pref-cultura" class="mr-2">
+                                                    <input type="checkbox" id="pref-cultura" class="mr-2" aria-label="Preferência por cultura">
                                                     🎭 Cultura
                                                 </label>
                                             </div>
